--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -84,3 +84,19 @@ form > input {
 /* newsletter section ends */
 
 /* compositions end */
+
+/* responsiveness */
+
+@media all and (max-width: 576px) {
+  .taglines-box,
+  .feedback-box {
+    margin-bottom: 2em;
+  }
+
+  .feedback-box:last-child {
+    margin-bottom: 8em;
+  }
+  .header-area {
+    text-align: center;
+  }
+}
